--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Staff/Edit.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Staff/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model NeoTokyo.ProductionBook.Models.Staff
+﻿@model NeoTokyo.ProductionBook.ViewModel.StaffResourceGroupViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -47,6 +47,16 @@
                 <div class="checkbox">
                     @Html.EditorFor(model => model.Active)
                     @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Resource Group", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="dropdown">
+                    @Html.DropDownList("ResourceGroupID", String.Empty)
+                    @Html.ValidationMessageFor(model => model.ResourceGroupID, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
