--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/ResourceGroup/Index.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/ResourceGroup/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<NeoTokyo.ProductionBook.Models.ResourceGroup>
+﻿@model PagedList.IPagedList<NeoTokyo.ProductionBook.Models.ResourceGroup>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
 
 @{
     ViewBag.Title = "Index";
@@ -9,25 +11,57 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm("Index", "ResourceGroup", FormMethod.Get))
+{
+    <p>
+        <table>
+            <tr>
+                <th>
+                    Find by Name
+                </th>
+                <th></th>
+            </tr>
+            <tr>
+                <td>
+                    @Html.TextBox("searchString", ViewBag.CurrentFilter as String, new {@class = "form-control"})
+                </td>
+                <td>
+                    <input type="submit" value="Search" class="btn btn-default"/>
+                </td>
+            </tr>
+        </table>
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.ActionLink("Name", "Index", new {sortOrder = ViewBag.ResourceGroupNameSortParm, currentFilter = ViewBag.CurrentFilter})
+        </th>
+        <th>
+            Assigned Staff Count
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StaffResourceGroupLinks.Count)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new {id = item.ID}) |
+                @Html.ActionLink("Details", "Details", new {id = item.ID}) |
+                @Html.ActionLink("Delete", "Delete", new {id = item.ID})
+            </td>
+        </tr>
+    }
 
 </table>
+<br/>
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index", new {page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter}))
