--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Staff/Index.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Staff/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<NeoTokyo.ProductionBook.Models.Staff>
+﻿@model PagedList.IPagedList<NeoTokyo.ProductionBook.Models.Staff>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
 
 @{
     ViewBag.Title = "Index";
@@ -9,49 +11,82 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm("Index", "Staff", FormMethod.Get))
+{
+    <p>
+        <table>
+            <tr>
+                <th>
+                    Find By Name:
+                </th>
+                <th>
+                    Find by Resource Group:
+                </th>
+                <th>
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    @Html.TextBox("searchNameString", "", new {@class = "form-control"})
+                </td>
+                <td>
+                    @Html.TextBox("searchResourceGroupString", "", new { @class = "form-control" })
+                </td>
+                <td>
+                    <input type="submit" value="Search" class="btn btn-default" />
+                </td>
+            </tr>
+        </table>
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MiddleName)
+            Middle Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.ActionLink("Last Name", "Index", new {sortOrder = ViewBag.LastNameSortParm, currentNameFilter = ViewBag.CurrentNameFilter})
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Active)
+            Active
         </th>
         <th>
-            Resource Group
+            @Html.ActionLink("Resource Group", "Index", new {sortOrder = ViewBag.ResourceGroupNameSortParm, currentResourceGroupFilter = ViewBag.CurrentResourceGroupFilter})
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MiddleName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Active)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StaffResourceGroupLink.ResourceGroup.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MiddleName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Active)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StaffResourceGroupLink.ResourceGroup.Name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new {id = item.ID}) |
+                @Html.ActionLink("Details", "Details", new {id = item.ID}) |
+                @Html.ActionLink("Delete", "Delete", new {id = item.ID})
+            </td>
+        </tr>
+    }
 
 </table>
+<br/>
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index", new {page, sortOrder = ViewBag.CurrentSort, currentNameFilter = ViewBag.CurrentNameFilter, currentResourceGroupFilter = ViewBag.CurrentResourceGroupFilter}))
