Added Designer Link to StaffController

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Staff/Details.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Staff/Details.cshtml
@@ -49,6 +49,14 @@
         <dd>
             @Html.DisplayFor(model => model.ResourceGroupName)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.IsDesigner)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IsDesigner)
+        </dd>
+
     </dl>
 </div>
 <p>
