--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Staff/Create.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Staff/Create.cshtml
@@ -50,6 +50,15 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.Label("Designer", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.IsDesigner)
+                    @Html.ValidationMessageFor(model => model.IsDesigner, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
