Updated Resource Group pages to add Department Entity

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/ResourceGroup/Delete.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/ResourceGroup/Delete.cshtml
@@ -19,6 +19,13 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
+        <dt>
+            Department
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Department.Name)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
