--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Resource Groups", "Index", "ResourceGroup")</li>
                     <li>@Html.ActionLink("Staff", "Index", "Staff")</li>
+                    <li>@Html.ActionLink("Departments", "Index", "Department")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
