Add Process Controller

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("Resource Groups", "Index", "ResourceGroup")</li>
                     <li>@Html.ActionLink("Staff", "Index", "Staff")</li>
                     <li>@Html.ActionLink("Departments", "Index", "Department")</li>
+                    <li>@Html.ActionLink("Processes", "Index", "Process")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
