Added Design Entity and Scaffolded Controller

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li>@Html.ActionLink("Staff", "Index", "Staff")</li>
                     <li>@Html.ActionLink("Departments", "Index", "Department")</li>
                     <li>@Html.ActionLink("Processes", "Index", "Process")</li>
+                    <li>@Html.ActionLink("Designs", "Index", "Design")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
