Added Design Controller

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Details.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Details.cshtml
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Designer.ID)
+            @Html.DisplayNameFor(model => model.DesignNumber)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Designer.ID)
+            @Html.DisplayFor(model => model.DesignNumber)
         </dd>
 
         <dt>
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DesignNumber)
+            Designer
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DesignNumber)
+            @Html.DisplayFor(model => model.Designer.Staff.FullName)
         </dd>
 
     </dl>
