--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Create.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Create.cshtml
@@ -16,11 +16,12 @@
         <h4>Design</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
-            @Html.LabelFor(model => model.DesignerID, "DesignerID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DesignNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("DesignerID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.DesignerID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.DesignNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DesignNumber, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -43,10 +44,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DesignNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Designer", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DesignNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DesignNumber, "", new { @class = "text-danger" })
+                @Html.DropDownList("DesignerID", (IEnumerable<SelectListItem>)ViewBag.Designers, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DesignerID, "", new { @class = "text-danger" })
             </div>
         </div>
 
