--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Delete.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Delete.cshtml
@@ -6,18 +6,18 @@
 }
 
 <h2>Delete</h2>
-
+<p class="error">@ViewBag.ErrorMessage</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Design</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Designer.ID)
+            @Html.DisplayNameFor(model => model.DesignNumber)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Designer.ID)
+            @Html.DisplayFor(model => model.DesignNumber)
         </dd>
 
         <dt>
@@ -37,11 +37,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DesignNumber)
+            Designer
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DesignNumber)
+            @Html.DisplayFor(model => model.Designer.Staff.FullName)
         </dd>
 
     </dl>
