Fixed Date Bug in Designs Edit and Create

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Edit.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Edit.cshtml
@@ -17,20 +17,13 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model=>model.Created)
 
         <div class="form-group">
             @Html.LabelFor(model => model.DesignNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DesignNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DesignNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Created, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Created, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Created, "", new { @class = "text-danger" })
             </div>
         </div>
 
