--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Details.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Details.cshtml
@@ -7,44 +7,127 @@
 
 <h2>Details</h2>
 
-<div>
-    <h4>Design</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DesignNumber)
-        </dt>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.DesignNumber)
-        </dd>
+    <div>
+        <h4>Design</h4>
+        <hr />
+        @Html.HiddenFor(model => model.ID)
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.DesignNumber)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.DesignNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Created)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Created)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Created)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Active)
+            </dt>
 
-        <dt>
-            Designer
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Active)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Designer.Staff.FullName)
-        </dd>
+            <dt>
+                Designer
+            </dt>
 
-    </dl>
-</div>
+            <dd>
+                @Html.DisplayFor(model => model.Designer.Staff.FullName)
+            </dd>
+
+        </dl>
+        <h4>Processes</h4>
+        @if (Model.DesignProcesses.Any())
+        {
+
+            <table class="table">
+                <tr>
+                    <th>
+                        Process Name
+                    </th>
+                    <th>
+                        Department Name
+                    </th>
+                    <th>
+                        Process Time
+                    </th>
+                    <th>
+                        Process Order
+                    </th>
+                </tr>
+
+                @foreach (var designProcess in Model.DesignProcesses)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => designProcess.Process.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => designProcess.Department.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => designProcess.ProcessTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => designProcess.ProcessOrder)
+                        </td>
+                    </tr>
+                }
+
+            </table>
+
+        }
+
+        <h4>Add New Process to this Design</h4>
+
+        <table>
+            <tr>
+                <th>
+                    Process
+                </th>
+                <th>
+                    Department
+                </th>
+                <th>
+                    Process Time
+                </th>
+                <th></th>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DropDownList("ProcessID", (IEnumerable<SelectListItem>)ViewBag.Processes, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.DesignProcesses.FirstOrDefault().ProcessID, "", new { @class = "text-danger" })
+                </td>
+                <td>
+                    @Html.DropDownList("DepartmentID", (IEnumerable<SelectListItem>)ViewBag.Departments, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.DesignProcesses.FirstOrDefault().DepartmentID, "", new { @class = "text-danger" })
+                </td>
+                <td>
+                    @Html.TextBox("ProcessTime", "", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.DesignProcesses.FirstOrDefault().ProcessTime, "", new { @class = "text-danger" })
+                </td>
+                <td>
+                    <input type="submit" class="btn btn-default" value="Add" />
+                </td>
+            </tr>
+        </table>
+    </div>
+
+}
+<br/>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
