Updated Design Details Page to add Design Processes

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Details.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Details.cshtml
@@ -45,7 +45,7 @@
                     <th></th>
                 </tr>
 
-                @foreach (var designProcess in Model.DesignProcesses)
+                @foreach (var designProcess in Model.DesignProcesses.OrderBy(i=>i.ProcessOrder))
                 {
                     <tr>
                         <td>@Html.DisplayFor(modelItem => designProcess.Process.Name)</td>
