Add and Delete DesignProcesses Working in DesignController

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Details.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Design/Details.cshtml
@@ -7,10 +7,6 @@
 
 <h2>Details</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
     <div>
         <h4>Design</h4>
         <hr />
@@ -31,53 +27,11 @@
             @Html.ActionLink("Back to List", "Index")
         </p>
 
-        <br />
-        @if (Model.DesignProcesses.Any())
-        {
-            <h4>Processes</h4>
+        <div>
+            @Html.Partial("_DesignProcesses", Model.DesignProcesses.ToList())
+        </div>
 
-            <table class="table">
-                <tr>
-                    <th>Process Name</th>
-                    <th>Department Name</th>
-                    <th>Process Time</th>
-                    <th>Process Order</th>
-                    <th></th>
-                </tr>
-
-                @foreach (var designProcess in Model.DesignProcesses.OrderBy(i=>i.ProcessOrder))
-                {
-                    <tr>
-                        <td>@Html.DisplayFor(modelItem => designProcess.Process.Name)</td>
-                        <td>@Html.DisplayFor(modelItem => designProcess.Department.Name)</td>
-                        <td>@Html.DisplayFor(modelItem => designProcess.ProcessTime)</td>
-                        <td>@Html.DisplayFor(modelItem => designProcess.ProcessOrder)</td>
-                    </tr>
-                }
-
-            </table>
-
-        }
-
-        <h4>Add New Process to this Design</h4>
-
-        <table>
-            <tr>
-                <th>Process</th>
-                <th>Department</th>
-                <th>Process Time</th>
-                <th></th>
-            </tr>
-            <tr>
-                <td>@Html.DropDownList("ProcessID", (IEnumerable<SelectListItem>)ViewBag.Processes, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.DesignProcesses.FirstOrDefault().ProcessID, "", new { @class = "text-danger" })</td>
-                <td>@Html.DropDownList("DepartmentID", (IEnumerable<SelectListItem>)ViewBag.Departments, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.DesignProcesses.FirstOrDefault().DepartmentID, "", new { @class = "text-danger" })</td>
-                <td>@Html.TextBox("ProcessTime", "", new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.DesignProcesses.FirstOrDefault().ProcessTime, "", new { @class = "text-danger" })</td>
-                <td><input type="submit" class="btn btn-default" value="Add" /></td>
-            </tr>
-        </table>
+        <div>
+            @Html.Partial("_AddDesignProcess", Model)
+        </div>
     </div>
-
-}
