--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_DesignProcesses.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_DesignProcesses.cshtml
@@ -22,15 +22,15 @@
                 <td>@Html.DisplayFor(modelItem => designProcess.ProcessTime)</td>
                 <td>@Html.DisplayFor(modelItem => designProcess.ProcessOrder)</td>
                 <td>
-                    @using (Html.BeginForm("MoveDesignProcessUp", "Design", new { id = designProcess.ID }, FormMethod.Post))
+                    @using (Html.BeginForm("MoveDesignProcessUp", "Design", new { id = designProcess.ID }, FormMethod.Post, new {style = "display: inline"}))
                     {
                         <input type="submit" name="Up" value="Up" class="btn btn-default" />
                     }
-                    @using (Html.BeginForm("MoveDesignProcessDown", "Design", new { id = designProcess.ID }, FormMethod.Post))
+                    @using (Html.BeginForm("MoveDesignProcessDown", "Design", new { id = designProcess.ID }, FormMethod.Post, new { style = "display: inline" }))
                     {
                         <input type="submit" name="Down" value="Down" class="btn btn-default" />
                     }
-                    @using (Html.BeginForm("DeleteDesignProcess", "Design", new { id = designProcess.ID }, FormMethod.Post))
+                    @using (Html.BeginForm("DeleteDesignProcess", "Design", new { id = designProcess.ID }, FormMethod.Post, new { style = "display: inline" }))
                     {
                         <input type="submit" name="Delete" value="Delete" class="btn btn-default"/>
                     }
