Add CustomerAddressLink Entity

--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     <li>@Html.ActionLink("Departments", "Index", "Department")</li>
                     <li>@Html.ActionLink("Processes", "Index", "Process")</li>
                     <li>@Html.ActionLink("Designs", "Index", "Design")</li>
+                    <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
