--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Customer/Index.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Customer/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<NeoTokyo.ProductionBook.Models.Customer>
+﻿@model PagedList.IPagedList<NeoTokyo.ProductionBook.Models.Customer>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "Index";
@@ -6,29 +8,56 @@
 }
 
 <h2>Index</h2>
-
+<p class="error">@ViewBag.ErrorMessage</p>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm("Index", "Customer", FormMethod.Get))
+{
+    <p>
+        <table>
+            <tr>
+                <th>
+                    Customer Name
+                </th>
+                <th></th>
+            </tr>
+            <tr>
+                <td>
+                    @Html.TextBox("searchCustomerNameString", "", new {@class = "form-control"})
+                </td>
+                <td>
+                    <input type="submit" value="Search" class="btn btn-default"/>
+                </td>
+            </tr>
+        </table>
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.ActionLink("Customer Name", "Index", new { sortOrder = ViewBag.CustomerNameSortParm, currentCustomerNameFilter = ViewBag.CurrentCustomerNameFilter })
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem=>item.Name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new {id = item.ID}) |
+                @Html.ActionLink("Details", "Details", new {id = item.ID}) |
+                @Html.ActionLink("Delete", "Delete", new {id = item.ID})
+            </td>
+        </tr>
+    }
 
 </table>
+<br/>
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentCustomerNameFilter = ViewBag.CurrentCustomerNameFilter }))
+
+
