--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     <li>@Html.ActionLink("Processes", "Index", "Process")</li>
                     <li>@Html.ActionLink("Designs", "Index", "Design")</li>
                     <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Countries", "Index", "Country")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
