--- a/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Country/Delete.cshtml
+++ b/NeoTokyo.ProductionBook/NeoTokyo.ProductionBook/Views/Country/Delete.cshtml
@@ -1,23 +1,30 @@
-﻿@model NeoTokyo.ProductionBook.Models.Customer
+﻿@model NeoTokyo.ProductionBook.Models.Country
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete</h2>
-<p class="error">@ViewBag.ErrorMessage</p>
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Customer</h4>
+    <h4>Country</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.CountryName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.CountryName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CountryCode)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CountryCode)
         </dd>
 
     </dl>
